# helloworld-fastapi

./: .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
helloworld/: app.py  settings.py
helloworld/dependencies/: database.py  service.py
helloworld/models/: base.py  file.py
helloworld/repositories/: base.py  errors.py  file.py
helloworld/routers/: __init__.py  dataset.py  health.py
helloworld/schemas/: dataset.py
helloworld/services/: dataset.py  errors.py
migrations/: env.py
migrations/versions/: 714acf457b32_initial.py  f329ba7e55d2_add_size.py
