[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["Alexander Anikeev <anikeevav@vtb.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"
sqlmodel = "^0.0.8"
alembic = "^1.10.2"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
